merge error: added missing rag stuff